--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 Vaelkomin til Vegg-verkaetlanina!
 
-Fyri at faa hetta rigga ma tad, setast upp i einum LAMP umhvorvi.
+Tiverri havi eg ikki nakran installara, so alt ma setast upp manuelt.
+Fyri at faa Vegg at rigga ma hann setast upp i einum LAMP umhvorvi.
 Mysql databasin kann setast upp vid informationini i databasi.sql.
 
 Takk fyri ahugan :)
